--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  color: #fefefe;
+  background-color: #0f0f0f;
+  height: 100vh;
+  width: 100vw;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  &--block {
+    display: flex;
+    justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+.led-color {
+  &--preview {
+    display: flex;
+    align-items: center;
+
+    div {
+      height: 24px;
+      width: 24px;
+      margin-left: 24px;
+    }
   }
 }
